--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "serv": "concurrently \"php artisan serve\" \"npm run dev\""
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.1.8",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
+        "concurrently": "^9.1.2",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
+        "postcss": "^8.5.4",
+        "tailwindcss": "^4.1.8",
         "vite": "^6.2.4"
     }
 }
