--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "postcss": "^8.5.4",
         "tailwindcss": "^4.1.8",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.22.1"
     }
 }
